avoid column wrapping when scroll by column, to allow horizontal scroll too

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -553,7 +553,9 @@ div.ms-Tooltip-content p.ms-Tooltip-subtext a {
 
 .feedback-board {
   @apply w-full grid flex-1 min-h-0;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: none;
+  grid-auto-flow: column;
+  grid-auto-columns: minmax(290px, 1fr);
 }
 
 .feedback-board.scroll-mode-board {
@@ -1664,7 +1666,7 @@ div.ms-Tooltip-content p.ms-Tooltip-subtext a {
 }
 
 .feedback-board-container {
-  @apply flex flex-col flex-1 h-[calc(100vh-88px)] min-h-0 border-t-4 border-(--nav-header-active-item-background) overflow-y-auto overflow-x-hidden;
+  @apply flex flex-col flex-1 h-[calc(100vh-88px)] min-h-0 border-t-4 border-(--nav-header-active-item-background) overflow-y-auto overflow-x-auto;
 }
 
 .feedback-board-container-header-spacer {
